gui/css/style.less
@import "prefixer.less";

@lightSeperator: solid hsl(0, 0%, 80%) 1px;
@darkSeperator: solid hsl(0, 0%, 27%) 1px;

.consoleFont(){
	font-family: Consolas, Lucida Console, monospace;
}

* {
	-moz-box-sizing: border-box;
	box-sizing: border-box;
}

.dijitContentPane, 
.dijitBorderContainerNoGutterPane, 
.dijitTooltip,
.dijitTabPaneWrapper,
.CodeMirror .CodeMirror-scroll  {
	-moz-box-sizing: content-box;
	box-sizing: content-box;
}

.claro .dijitContentPane {
	padding: 0;	
}

.claro .dijitStackContainer-child {
	height: 100%;
}

.claro .dijitTabPaneWrapper {
	overflow: auto;
}

.claro .dijitTabContainerTop-tabs .dijitTab,
.claro .dijitTabContainerTop-tabs .dijitTabChecked {
	// Override default big tab
	padding-top: 0px;
	padding-bottom: 0px;
}
.claro .dijitTabContainerTop-tabs .dijitTabChecked {
	padding-bottom: 1px;
}

html, body {
	margin: 0;
	padding: 0;
	overflow: hidden;
	font-family: 'Lucida Grande', sans-serif;
	font-size: 12px;
	height: 100%;
	width: 100%;
}

#appLayout {
	height: 100%;
	width: 100%;
}
@import "helper.less";

//Headline
@font-face {
  font-family: 'Cantora One';
  font-style: normal;
  font-weight: 400;
  src: local('Cantora One'), local('CantoraOne-Regular'), url(CantoraOne-Regular.woff) format('woff'), url(CantoraOne-Regular.ttf) format('truetype');
}

h3 {
	font-family: 'Cantora One', sans-serif;
	font-size: 20px;
	font-weight: normal;
	margin-top: 0.7em;
}

.lightBg() {
	.linear-gradient-top(hsl(0,0%,95%),
		white,0%,
		hsl(0,0%,95%),100%
	);
}

@linkBlue: hsl(216, 100%, 39%);

@headerHeight: 64px;
header {
	overflow: auto;
	display: block;
	height: @headerHeight;
	padding: 0px 10px;
	.lightBg;
	border-bottom: @darkSeperator;

	h3 {
		margin: 0;
		line-height: @headerHeight / 1.1;
		float: left;
	}
	
	.mainToolbar.dijitToolbar {
		float: left;
		margin-top: 20px;
		margin-left: 30px;
		background: none;
		border: none;
	}
}

header a {
	@fontSize: 12px;
	line-height: @fontSize;
	font-size: @fontSize;
	float: right;
	color: black;
	margin-right: 30px;
	margin-top: (@headerHeight - @fontSize) / 2 ;
	text-decoration: none;
	&:before {
		content: "[";
	}
	&:after {
		content: "]";
	}
}

header img {
	margin-left: 10px;
	margin-right: 15px;
	float: left;
}

.openDetail {
	cursor: pointer;
	color: @linkBlue;
}

.detailPane {
	min-height: 200px;
	height: 40%;
}

.detailPane .dijitTabPane {
	padding: 1px 10px 20px;
}

.searchbox {
	width: 100%;
	input[type=text] {
		width: 100%;
	}
}

#trafficPane {
	border-right: @lightSeperator;
	border-bottom: @lightSeperator;
}

.sidebar {
	padding: 20px;
	border-left: @lightSeperator;
	background-color: hsl(0,0%,97%);
	min-width: 200px;
	width: 100%;
	height: 100%;
	overflow-y: auto;
}

#tutorial {
	position: absolute;
	top: @headerHeight + 30px;
	left: 30px;
}

@import "search.less";
@import "traffictable.less";
@import "preview.less";
@import "raw.less";
@import "details.less";
@import "ReportOutput.less";
@import "ReportEditor.less";

